fixed the image resizing on small screen. #6

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
     font-weight: lighter;
     display: flex;
     flex-direction: row;
-    gap: 25px;
+    gap: 20px;
     flex-wrap: wrap;
     padding-top: 10px;
     min-width: 250px;
@@ -155,17 +155,19 @@ body {
 }
 
 #quote {
-    padding-top: 20px;
+    padding-top: 25px;
     padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
     width: 100%;
     max-width: 650px;
-    font-size: 22px;
+    font-size: 24px;
     text-align: center;
     flex: 1 1 auto;
 }
 
 #writer {
-    padding: 10px;
+    padding: 15px;
     width: 100%;
     max-width: 650px;
     font-size: 18px;
